--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,37 @@
 /* Keyframes */
-
+@keyframes headerAppear {
+  0% {
+    opacity: 0;
+    transform: translateY(-5em);
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+  }
+}
+@keyframes footerAppear {
+  0% {
+    opacity: 0;
+    transform: translateY(5em);
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+  }
+}
+@keyframes bioAppear {
+  0% {
+    opacity: 0;
+    transform: translateX(-10em);
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+  }
+}
 /* Keyframes */
 
 /* RESET CSS */
@@ -7,9 +39,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 100;
-
 }
 /* RESET CSS */
 
@@ -41,6 +72,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  animation: headerAppear 1s both;
+  animation-delay: 1s;
 }
 .headerLogoContainer {
   display: flex;
@@ -91,225 +124,328 @@ body {
   justify-content: center;
   align-items: center;
   font-size: 24px;
+  animation: footerAppear 1s both;
+  animation-delay: 1s;
 }
-.footerMediaLinks{
+.footerMediaLinks {
   display: none;
 }
 /* Footer */
 
 /* Biography Container */
-  .biographyContainer {
-    min-height: 100vh;
-    display: grid;
-    grid-template-rows: auto 1fr 1fr 1fr;
-    grid-gap: 20px;
-    padding: 20px;
-    color: white;
-  }
-  
-  .header {
-    display: grid;
-    grid-gap: 10px;
-    text-align: center;
-  }
-  
-  .bio,
-  .experience,
-  .contact {
-    padding: 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    box-shadow: 0 0 1em 0.2em #151515;
-    background-color: #151515;
-  }
-  .contact{
-    gap: 1em;
-    }
-  .rrss{
-    display: flex;
-    gap: 1em;
-  }
-  .instagram{
-    background:url(./components/images/instagram.png);
-    background-size: cover;
-    background-position: center;
-    width: 32px;
-    height: 32px;
-  }
-  .facebook{
-    background:url(./components/images/facebook.png);
-    background-size: cover;
-    background-position: center;
-    width: 32px;
-    height: 32px;
-  }
-  .whatsapp{
-    background:url(./components/images/whatsapp.png);
-    background-size: cover;
-    background-position: center;
-    width: 32px;
-    height: 32px;
-  }
+.biographyContainer {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr 1fr 1fr;
+  grid-gap: 20px;
+  padding: 20px;
+  color: white;
+}
+.header {
+  display: grid;
+  grid-gap: 10px;
+  text-align: center;
+}
+
+.bio,
+.experience,
+.contact {
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1em;
+  flex-direction: column;
+  text-align: center;
+  box-shadow: 0 0 1em 0.2em #151515;
+  background-color: #151515;
+}
+.contact {
+  gap: 1em;
+}
+.rrss {
+  display: flex;
+  gap: 1em;
+}
+.instagram {
+  background: url(./components/images/instagram.png);
+  background-size: cover;
+  background-position: center;
+  width: 32px;
+  height: 32px;
+}
+.facebook {
+  background: url(./components/images/facebook.png);
+  background-size: cover;
+  background-position: center;
+  width: 32px;
+  height: 32px;
+}
+.whatsapp {
+  background: url(./components/images/whatsapp.png);
+  background-size: cover;
+  background-position: center;
+  width: 32px;
+  height: 32px;
+}
 /* Biography Container */
 
-
-
-
 /* Courses Container */
-.coursesContainer{
-
+.coursesContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  margin-bottom: 4em;
 }
+.coursesTitle {
+  text-align: center;
+  color: white;
+  margin-bottom: 1em;
+}
+.course {
+  padding: 1em;
+  min-width: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  font-size: 24px;
+  box-shadow: 0 0 1em 0.2em #151515;
+  background-color: #151515;
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+
+  transition: 1s;
+}
+.course:active {
+  box-shadow: inset 0em -2em 5em 1em white;
+  color: #151515;
+  transition: 0.4s;
+  transform: translateY(-0.3em) scale(1.1);
+}
+
+/* Courses Detail */
+
+.course-detail-container {
+  display: flex;
+  background-color: #151515;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  color: white;
+  min-height: 300px;
+  margin-bottom: 5em;
+  width: 40%;
+  margin-top: 1em;
+}
+
+.course-detail-content {
+  flex: 1;
+}
+
+.course-detail-title {
+  display: flex;
+  align-self: flex-start;
+  margin: 0;
+  font-size: 24px;
+}
+
+.course-detail-text {
+  margin: 10px 0;
+}
+
+.course-detail-hours {
+  display: flex;
+  justify-content: center;
+  align-self: end;
+  gap: 0.5em;
+  opacity: 0.5; /* Opacidad del texto de las horas */
+}
+.course-detail-hours-text {
+  font-size: 16px;
+  margin-bottom: 5px;
+  align-self: flex-end;
+}
+
+/* Courses Detail */
+
 /* Courses Container */
-
-
-
 
 /* Home Container */
-.homeContainer{
-display: flex;
-align-items: center;
-justify-content: center;
-flex-direction: column;
-gap: 2em;
+.homeContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2em;
 }
-.homeLogo{
+.homeTitle {
+  color: white;
+}
+.homeLogo {
   background: url(./components/images/logo.png);
   background-size: cover;
   background-position: center;
   width: 256px;
   height: 256px;
 }
-.homeBtn{
+.homeBtn {
   background-color: #151515;
   color: white;
   border: none;
   box-shadow: none;
   font-size: 24px;
   border-radius: 0.3em;
-width: 200px;
-height: 45px;  
-  transition:0.4s;
-cursor: pointer;
+  width: 200px;
+  height: 45px;
+  transition: 0.4s;
+  cursor: pointer;
 }
-.homeBtn:active{
+.homeBtn:active {
   box-shadow: inset 0em -2em 5em 1em white;
   color: #151515;
-  transition:0.4s;
+  transition: 0.4s;
   transform: translateY(-0.3em) scale(1.1);
 }
 /* Home Container */
 
-
-
-
 /* Shop Container */
-.shopContainer{
-
+.shopContainer {
 }
 /* Shop Container */
 
-
-
-
 /* Cart Container */
-.cartcontainer{
-
+.cartcontainer {
 }
 /* Cart Container */
 
+/* Coming Soon... */
+.coming-soon-container {
+  text-align: center;
+  padding: 50px;
+  background-color: #151515;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.coming-soon-title {
+  font-size: 24px;
+  margin: 0;
+  color: #ffffff;
+}
+
+.coming-soon-description {
+  font-size: 18px;
+  color: #666;
+}
+/* Coming Soon... */
+
+
 
 /* Media 1200 */
-@media (max-width:1200px) {
+@media (max-width: 1200px) {
+  /* Footer Media 1200 */
+  .footerContainer {
+    font-size: 18px;
+  }
+  /* Footer Media 1200 */
 
-  
+  /* Home Media 1200 */
+  .homeLogo {
+    width: 200px;
+    height: 200px;
+  }
+  .headerNav {
+    gap: 2em;
+  }
+  /* Home Media 1200 */
 
-/* Footer Media 1200 */
-.footerContainer{
-font-size: 18px;
-}
-/* Footer Media 1200 */
+  /* Biography Media 1200 */
+  .biographyContainer div:nth-child(2) {
+    animation: bioAppear 1s both;
+  }
+  .biographyContainer div:nth-child(3) {
+    animation: bioAppear 1s both;
+    animation-delay: 0.5s;
+  }
+  .biographyContainer div:nth-child(4) {
+    animation: bioAppear 1s both;
+    animation-delay: 1s;
+  }
+  /* Biography Media 1200 */
 
-/* Home Media 1200 */
-.homeLogo{
-width: 200px;
-height: 200px;
-}
-.headerNav{
-  gap: 2em;
-}
-/* Home Media 1200 */
-
-
+  /* Courses Media 1200 */
+  .course {
+    min-width: 400px;
+  }
+  .course-detail-container {
+    width: 50%;
+  }
+  /* Courses Media 1200 */
 }
 /* Media 1200 */
-
-
-
-
 
 /* Media 768 */
-@media (max-width:768px) {
-
+@media (max-width: 768px) {
   /* Container Media 768 */
-.container{
-  justify-content: center;
-}
+  .container {
+    justify-content: center;
+    overflow-x: hidden;
+  }
   /* Container Media 768 */
-
-
 
   /* Header Media 768 */
-.headerContainer{
-  display: none;
-}
-  /* Header Media 768 */
-
-
-  /* Footer Media 768 */
-.footerContainer{
-  position: fixed;
-  bottom: 0;
-}
-  .footerContainer p{
+  .headerContainer {
     display: none;
   }
-  .footerMediaLinks{
+  /* Header Media 768 */
+
+  /* Footer Media 768 */
+  .footerContainer {
+    position: fixed;
+    bottom: 0;
+  }
+  .footerContainer p {
+    display: none;
+  }
+  .footerMediaLinks {
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 100%;
     height: 100%;
   }
-  .footerMediaLinks a{
+  .footerMediaLinks a {
     color: white;
   }
-  .footerMediaLink{
-border-top-left-radius: 50%;
-border-top-right-radius: 50%;
+  .footerMediaLink {
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
     transition: 0.3s;
-  cursor: pointer;
-}
-  .footerMediaLink:hover{
+    cursor: pointer;
+  }
+  .footerMediaLink:hover {
     transition: 0.3s;
   }
 
-  .borderLinkActive{
+  .borderLinkActive {
     border-bottom: 1px solid white;
     font-size: 32px !important;
   }
-/* Footer Media 768 */
+  /* Footer Media 768 */
 
-/* Home Media 768 */
-.homeContainer{
+  /* Home Media 768 */
+  .homeContainer {
   }
-  .homeLogo{
+  .homeLogo {
     width: 128px;
     height: 128px;
   }
-  .homeBtn{
+  .homeBtn {
     font-size: 24px;
     padding: 0.2em 1em 0.2em 1em;
     width: 156px;
@@ -317,16 +453,24 @@ border-top-right-radius: 50%;
   }
 
   /* Home Media 768 */
-  
-  
-  
+
   /* Biography Media 768 */
-  .biographyContainer{
+  .biographyContainer {
     margin-bottom: 5em;
   }
   /* Biography Media 768 */
+
+  /* Courses Media 768 */
+  .coursesContainer {
+  }
+  .course {
+    min-width: 300px;
+    font-size: 16px;
+  }
+  .course-detail-container {
+    width: 100%;
+  }
+  /* Courses Media 768 */
 }
-
-
 
 /* Media 768 */
