--- a/app/globals.css
+++ b/app/globals.css
@@ -172,6 +172,34 @@ gap: 2em;
   box-shadow: 0 0 1em 0.2em #151515;
   background-color: #151515;
 }
+.learnShotBtnContainer{
+  width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.learnShotBtn{
+  background-color: #151515;
+  color: white;
+  border: none;
+  width: 90%;
+  box-shadow: none;
+  font-size: 16px;
+  border-radius: 0.3em;
+  height: 45px;
+  transition: 0.4s;
+border-bottom: 3px solid white;
+cursor: pointer;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.learnShotBtn:active{
+border-bottom: 3px solid white;
+
+  transition: 0.4s;
+  transform: translateY(-0.3em) scale(1.1);
+}
 .bio h2, .experience h2, .contact h2{
   margin-bottom: 0.5em;
   border-bottom: 1px solid #151515;
@@ -373,6 +401,158 @@ transition:0.3s;
 }
 /* Coming Soon... */
 
+
+/* Admin Page */
+.adminPageContainer{
+
+}
+.adminPageTitle{
+color: white;
+margin-bottom: 1em;
+}
+.adminPageList{
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+  justify-content: center;
+  align-items: center;
+}
+.adminLink{
+  font-size: 32px;
+  text-decoration: none;
+  color: white;
+  background-color: #151515;
+  width: 100%;
+  height: 50px;
+  border-radius: 1em;
+text-align: center;
+transition: 0.4s;
+}
+.adminLink:active{
+  box-shadow: inset 0em -2em 5em 1em white;
+  color: #151515;
+  transition: 0.4s;
+  transform: translateY(-0.3em) scale(1.1);
+}
+.adminPageCourses{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.adminCoursesList{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 5em;
+  margin-top: 1em;
+
+}
+.adminPageCoursesCreateBtn{
+  background-color: #151515;
+  color: white;
+  border: none;
+  box-shadow: none;
+  font-size: 24px;
+  border-radius: 0.3em;
+  width: 200px;
+  height: 45px;
+  transition: 0.4s;
+  cursor: pointer;
+display: flex;
+justify-content: center;
+align-items: center;
+margin-bottom: 1em;
+}
+.adminPageCoursesCreateBtn:active{
+  box-shadow: inset 0em -2em 5em 1em white;
+  color: #151515;
+  transition: 0.4s;
+  transform: translateY(-0.3em) scale(1.1);
+}
+.adminCoursesListTitle{
+  color: white;
+  text-align: center;
+  margin-bottom: 1em;
+}
+
+.createCourseForm{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.courseFormTitle{
+background-color: #151515;
+color: #d9d9d9;
+padding: 0.3em;
+border-radius: 0.2em;
+margin-bottom: 0.3em;
+}
+.courseFormInput{
+margin-bottom: 1em;
+width: 400px;
+background-color: #151515;
+color: #d9d9d9;
+padding: 0.4em;
+border: none;
+outline: none;
+height: 40px;
+border-radius: 0.2em;
+border-bottom: 2px solid white;
+}
+.courseFormBtn{
+  background-color: #151515;
+  color: white;
+  border: none;
+  width: 90%;
+  box-shadow: none;
+  font-size: 16px;
+  border-radius: 0.3em;
+  height: 45px;
+  transition: 0.4s;
+  border-bottom: 3px solid white;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.courseFormBtn:hover{
+  width: 100%;
+  transition: 0.4s;
+}
+.courseFormBtn:active{
+  transform: scale(1.1);
+  transition: 0.4s;
+  position: relative;
+  top: 1px;
+}
+.courseDelete{
+position: relative;
+z-index: 10;
+border-left: 1px solid #d9d9d9;
+padding-right: 0.5em;
+}
+.courseAdmin{
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
+padding: 0;
+height: 70px;
+}
+.courseLink{
+  color: white;
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* Admin Page */
+
+
 /* Auth */
 .login-container {
   max-width: 400px;
@@ -533,7 +713,7 @@ transition:0.3s;
   /* Biography Media 768 */
   .biographyContainer {
     margin-bottom: 5em;
-    grid-template-columns: 300px;
+    grid-template-columns: 400px;
   }
   /* Biography Media 768 */
 
