--- a/app/globals.css
+++ b/app/globals.css
@@ -54,6 +54,7 @@
 html,
 body {
   animation: start 2s both;
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(25,44,25,1) 90%);
 }
 /* Html, Body */
 
@@ -157,6 +158,9 @@ gap: 2em;
   justify-content: center;
   align-items: center;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Agregamos un sombreado al texto */
+  border-bottom: 3px solid white;
+  border-bottom-right-radius: 0.5em;
+  border-bottom-left-radius: 0.5em;
 }
 
 .bio,
@@ -193,10 +197,10 @@ cursor: pointer;
 display: flex;
 justify-content: center;
 align-items: center;
+text-decoration: none;
 }
 .learnShotBtn:active{
 border-bottom: 3px solid white;
-
   transition: 0.4s;
   transform: translateY(-0.3em) scale(1.1);
 }
@@ -239,6 +243,49 @@ transition:0.3s;
 }
 /* Biography Container */
 
+
+/* Contact Container */
+.contactContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  }
+  .formContainer{
+  display: flex;
+  flex-direction: column;
+  }
+  .inputContactForm{
+    padding: 1em;
+    margin-bottom: 6px;
+    border-bottom-left-radius:0.5em;
+    border-bottom-right-radius:0.5em;
+    background-color:#151515;
+    border: none;
+    border-bottom: 1px solid white;
+    color: #d9d9d9;
+    outline: none;
+  }
+  .btnContactForm{
+  height: 40px;
+  font-size: 24px;
+  background-color: #151515;
+  color: #d9d9d9;
+  border: none;
+  box-shadow:inset 0 -2px 0 0 white;
+  border-bottom-left-radius:0.5em;
+  border-bottom-right-radius:0.5em;
+  transition: 0.3s;
+  cursor: pointer;
+  }
+  .btnContactForm:hover{
+  box-shadow: inset 0 -40px 0 0 white;
+    transition: 0.3s;
+    color: #151515;
+  }
+  /* Contact Container */
+  
+
 /* Courses Container */
 .coursesContainer {
   display: flex;
@@ -260,6 +307,27 @@ transition:0.3s;
   justify-content: center;
   align-items: center;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+  border-bottom-left-radius: 0.4em;
+  border-bottom-right-radius: 0.4em;
+  border-bottom: 2px solid white;
+}
+.coursesTitleLarge{
+
+    text-align: center;
+    color: white;
+    font-size: 36px; 
+    margin-bottom: 1em;
+    background-color: #151515;
+    width: 500px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); 
+    border-bottom-left-radius: 0.4em;
+    border-bottom-right-radius: 0.4em;
+    border-bottom: 2px solid white;
+
 }
 .course {
   padding: 1em;
@@ -332,6 +400,9 @@ transition:0.3s;
 
 /* Courses Container */
 
+
+
+
 /* Home Container */
 .homeContainer {
   display: flex;
@@ -387,6 +458,7 @@ transition:0.3s;
   background-color: #151515;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-bottom: 3px solid white;
 }
 
 .coming-soon-title {
@@ -408,7 +480,24 @@ transition:0.3s;
 }
 .adminPageTitle{
 color: white;
-margin-bottom: 1em;
+text-align: center;
+opacity: 0;
+animation: adminTitle 4s both;
+font-size: 32px;
+padding: 0.3em;
+border-bottom: 2px solid rgb(255, 255, 255);
+}
+.adminPageTitleAf{
+  background-color: #151515;
+  border-bottom: 2px solid white;
+  border-bottom-left-radius:0.3em;
+  border-bottom-right-radius:0.3em;
+}
+@keyframes adminTitle {
+  0%{opacity: 0;}
+  33%{opacity: 1;}
+  57%{opacity: 0;}
+  100%{opacity: 1; transform: translateY(-3em);}
 }
 .adminPageList{
   display: flex;
@@ -418,15 +507,19 @@ margin-bottom: 1em;
   align-items: center;
 }
 .adminLink{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 32px;
   text-decoration: none;
   color: white;
   background-color: #151515;
-  width: 100%;
-  height: 50px;
+  width: 500px;
+  height: 70px;
   border-radius: 1em;
 text-align: center;
 transition: 0.4s;
+border-bottom: 2px solid white;
 }
 .adminLink:active{
   box-shadow: inset 0em -2em 5em 1em white;
